<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.linkki-framework.samples</groupId>
    <artifactId>linkki-sample-test-playground-vaadin-flow-uitest</artifactId>
    <version>2.10.0-a20260608-01</version>
    <packaging>jar</packaging>

    <name>Automated UI Testing for linkki Vaadin Flow Samples Test Playground</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>

        <junit.version>6.0.2</junit.version>
        <commons-lang3.version>3.20.0</commons-lang3.version>
        <assertj.version>3.27.6</assertj.version>
        <selenium.version>4.41.0</selenium.version>
        <httpclient5.version>5.6</httpclient5.version>
        <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>

        <test.headless>false</test.headless>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.seleniumhq.selenium</groupId>
                <artifactId>selenium-dependencies-bom</artifactId>
                <version>${selenium.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.linkki-framework.samples</groupId>
            <artifactId>linkki-sample-test-playground-vaadin-flow</artifactId>
            <version>${project.version}</version>
            <!-- only use classes of playground directly to reference identifiers,
                no transitive dependencies to avoid conflicts -->
            <classifier>classes</classifier>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.linkki-framework</groupId>
            <artifactId>linkki-test</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.linkki-framework</groupId>
            <artifactId>linkki-vaadin-flow-testbench-extension</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents.client5</groupId>
            <artifactId>httpclient5</artifactId>
            <version>${httpclient5.version}</version>
        </dependency>

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                    <showDeprecation>true</showDeprecation>
                    <compilerArgs>
                        <arg>-Xmaxerrs</arg>
                        <arg>1000</arg>
                        <arg>-Xmaxwarns</arg>
                        <arg>1000</arg>
                        <arg>-Xlint:all</arg>
                        <arg>-Xlint:-processing</arg>
                        <!-- Because the eclipse compiler and javac differ:
                            https://bugs.eclipse.org/bugs/show_bug.cgi?id=344783 -->
                        <arg>-Xlint:-varargs</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <systemPropertyVariables>
                            <test.port>${test.port}</test.port>
                            <test.headless>${test.headless}</test.headless>
                            <test.hostname>${test.hostname}</test.hostname>
                            <test.path>${test.path}</test.path>
                            <test.hostname.f10>${test.hostname.f10}</test.hostname.f10>
                            <test.port.f10>${test.port.f10}</test.port.f10>
                        </systemPropertyVariables>
                        <forkCount>4</forkCount>
                        <reuseForks>false</reuseForks>
                        <reportsDirectory>target/surefire-reports-${surefire.forkNumber}</reportsDirectory>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>headless</id>
            <properties>
                <test.headless>true</test.headless>
            </properties>
        </profile>
    </profiles>
</project>
